--- a/css/common.css
+++ b/css/common.css
@@ -33,16 +33,15 @@ img {
 
 .gallery {
   list-style: none;
-  margin: 20px;
+  margin: 0px;
   padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   gap: 20px;
   background-color: #767255fc;
 }
 
-.gallery__list {
+.gallery__item {
   border: 5px solid #d2cda3f7;
   border-radius: 20px;
   overflow: hidden;
@@ -52,13 +51,13 @@ img {
   .gallery {
     flex-direction: row;
   }
-  .gallery__list {
+  .gallery__item {
     flex-basis: calc((100% - 40px) / 3);
   }
 }
 
 @media screen and (max-width: 767px) {
-  .gallery__list {
-    height: calc((100vh - 15vh) / 3);
+  .gallery__item {
+    height: calc(100vh / 3);
   }
 }
